--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "bcrypt": "^5.1.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.6.5",
     "mongoose": "^8.12.1",
     "next": "14.2.24",
     "next-auth": "^4.24.11",
