--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next-auth": "^4.24.11",
     "react": "^18",
     "react-datepicker": "^8.2.0",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sweetalert2": "^11.19.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
