--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^8.12.1",
     "next": "14.2.24",
     "next-auth": "^4.24.11",
+    "next-pwa": "^5.6.0",
     "react": "^18",
     "react-datepicker": "^8.2.0",
     "react-dom": "^18",
