--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "14.2.24",
     "next-auth": "^4.24.11",
     "next-pwa": "^5.6.0",
+    "nodemailer": "^6.10.1",
     "react": "^18",
     "react-datepicker": "^8.2.0",
     "react-dom": "^18",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
