--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18",
     "react-datepicker": "^8.2.0",
     "react-dom": "^18",
+    "react-icons": "^5.5.0",
     "sweetalert2": "^11.19.1"
   },
   "devDependencies": {
